# memcached-client

./: .gitignore  CMakeLists.txt  LICENSE  client.c  client_debug.c
scripts/: benchmark.py  deploy.sh  push-code.sh
